--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_210.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_210.jrxml
@@ -262,9 +262,9 @@ _________________________________________                                       
 								<text><![CDATA[MIEMBROS PRINCIPALES]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:columnFooter height="78" rowSpan="1">
+						<jr:columnFooter height="140" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="773" height="78"/>
+								<reportElement x="0" y="1" width="773" height="138"/>
 								<box topPadding="3" leftPadding="3" bottomPadding="3" rightPadding="3">
 									<pen lineWidth="1.5" lineColor="#00834C"/>
 									<topPen lineWidth="1.5" lineColor="#00834C"/>
@@ -275,7 +275,8 @@ _________________________________________                                       
 								<textElement textAlignment="Justified">
 									<font size="10" isBold="true"/>
 								</textElement>
-								<text><![CDATA[Todo candidato al momento de postularse y con la firma del presente formato de inscripción de planchas,  declara  que  no  se  encuentra  incurso  en  alguna causal  de  inhabilidad  o  incompatibilidad  estatutaria  o  reglamentaria,  así  como  que conoce  y  acata  el  Código  de  Buen  Gobierno  y  el  Código de  Ética  y  se  compromete  a permanecer  actualizado  respecto  de  los  reglamentos  y  demás  normas  que  expida  la Cooperativa y que le sean aplicables, ante la Junta de Vigilancia. Código Electoral Acuerdo N° 652 (CA-AC-2021.652) Art 61 Numeral 3. Reglamento Electoral Resolución 459 (CA-RE-2021.459) Art 26 Numeral 3.]]></text>
+								<text><![CDATA[Todo candidato al momento de postularse y con la firma del presente formato de inscripción de planchas,  declara  que  no  se  encuentra  incurso  en  alguna causal  de  inhabilidad  o  incompatibilidad  estatutaria  o  reglamentaria,  así  como  que conoce  y  acata  el  Código  de  Buen  Gobierno  y  el  Código de  Ética  y  se  compromete  a permanecer  actualizado  respecto  de  los  reglamentos  y  demás  normas  que  expida  la Cooperativa y que le sean aplicables, ante la Junta de Vigilancia. Código Electoral Acuerdo N° 652 (CA-AC-2021.652) Art 61 Numeral 3. Reglamento Electoral Resolución 459 (CA-RE-2021.459) Art 26 Numeral 3.
+En el caso de Zona Electoral Especial Regional la condición de candidato y elector se circunscribe a los asociados empleados, promotores o corredores de Coomeva o de las empresas de su Grupo Empresarial Cooperativo. Tratándose de corredores, corresponden a esta zona electoral los corredores personas naturales y los administradores y los socios o accionistas de los corredores personas jurídicas de Coomeva o de las empresas de su Grupo Empresarial Cooperativo. Por lo tanto, el candidato al momento de postularse y con la firma del presente formato, declara que evalúo esta condición para efectos de la determinación de la Zona Electoral para la cual se inscribe y que cumple a cabalidad con la reglamentación vigente expedida para el efecto.]]></text>
 							</staticText>
 						</jr:columnFooter>
 						<jr:column width="83">
@@ -419,9 +420,9 @@ _________________________________________                                       
 								<text><![CDATA[MIEMBROS SUPLENTES]]></text>
 							</staticText>
 						</jr:columnHeader>
-						<jr:columnFooter height="171" rowSpan="1">
+						<jr:columnFooter height="239" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="71" width="771" height="69" forecolor="#00834C"/>
+								<reportElement x="0" y="140" width="771" height="69" forecolor="#00834C"/>
 								<textElement verticalAlignment="Middle"/>
 								<text><![CDATA[Nombre (s) y  Apellidos  de quién inscribe la Plancha                                                    Firma de quién inscribe la Plancha
 
@@ -429,12 +430,12 @@ _________________________________________                                       
 _________________________________________                                                   _________________________________________]]></text>
 							</staticText>
 							<staticText>
-								<reportElement x="0" y="140" width="771" height="30" forecolor="#00834C"/>
+								<reportElement x="0" y="208" width="771" height="30" forecolor="#00834C"/>
 								<textElement verticalAlignment="Top"/>
 								<text><![CDATA[CO-FT-210 (Reverso)                                                                                                                                                                                       Mod. Octubre 2021]]></text>
 							</staticText>
 							<staticText>
-								<reportElement x="0" y="2" width="771" height="69"/>
+								<reportElement x="0" y="1" width="771" height="137"/>
 								<box topPadding="3" leftPadding="3" bottomPadding="3" rightPadding="3">
 									<pen lineWidth="1.5" lineColor="#00834C"/>
 									<topPen lineWidth="1.5" lineColor="#00834C"/>
@@ -445,7 +446,8 @@ _________________________________________                                       
 								<textElement textAlignment="Justified">
 									<font size="10" isBold="true"/>
 								</textElement>
-								<text><![CDATA[Todo candidato al momento de postularse y con la firma del presente formato de inscripción de planchas,  declara  que  no  se  encuentra  incurso  en  alguna causal  de  inhabilidad  o  incompatibilidad  estatutaria  o  reglamentaria,  así  como  que conoce  y  acata  el  Código  de  Buen  Gobierno  y  el  Código de  Ética  y  se  compromete  a permanecer  actualizado  respecto  de  los  reglamentos  y  demás  normas  que  expida  la Cooperativa y que le sean aplicables, ante la Junta de Vigilancia. Código Electoral Acuerdo N° 652 (CA-AC-2021.652) Art 61 Numeral 3. Reglamento Electoral Resolución 459 (CA-RE-2021.459) Art 26 Numeral 3.]]></text>
+								<text><![CDATA[Todo candidato al momento de postularse y con la firma del presente formato de inscripción de planchas,  declara  que  no  se  encuentra  incurso  en  alguna causal  de  inhabilidad  o  incompatibilidad  estatutaria  o  reglamentaria,  así  como  que conoce  y  acata  el  Código  de  Buen  Gobierno  y  el  Código de  Ética  y  se  compromete  a permanecer  actualizado  respecto  de  los  reglamentos  y  demás  normas  que  expida  la Cooperativa y que le sean aplicables, ante la Junta de Vigilancia. Código Electoral Acuerdo N° 652 (CA-AC-2021.652) Art 61 Numeral 3. Reglamento Electoral Resolución 459 (CA-RE-2021.459) Art 26 Numeral 3.
+En el caso de Zona Electoral Especial Regional la condición de candidato y elector se circunscribe a los asociados empleados, promotores o corredores de Coomeva o de las empresas de su Grupo Empresarial Cooperativo. Tratándose de corredores, corresponden a esta zona electoral los corredores personas naturales y los administradores y los socios o accionistas de los corredores personas jurídicas de Coomeva o de las empresas de su Grupo Empresarial Cooperativo. Por lo tanto, el candidato al momento de postularse y con la firma del presente formato, declara que evalúo esta condición para efectos de la determinación de la Zona Electoral para la cual se inscribe y que cumple a cabalidad con la reglamentación vigente expedida para el efecto.]]></text>
 							</staticText>
 						</jr:columnFooter>
 						<jr:column width="83">
