se agrega validacion de tipo de archivo para el crague de otras entidades en modulo admin

--- a/ELE.web/WebRoot/gui/forms/cargarArchivoOtrasEntElect.jspx
+++ b/ELE.web/WebRoot/gui/forms/cargarArchivoOtrasEntElect.jspx
@@ -51,12 +51,14 @@
 										<div align="center">
 										<ice:panelGrid>
 											<ice:inputFile id="inputFileName"  width="410"
-					                                    	progressListener="#{cargarArchivoOtrasEntElectVista.actionFileUploadProgress}"
-					                                    	actionListener="#{cargarArchivoOtrasEntElectVista.actionUploadFile}"
-					                                    	submitOnUpload="preUpload"  />
-					                                    	
-					                                    	<ice:outputProgress value="#{cargarArchivoOtrasEntElectVista.fileProgress}"  
-					                                        styleClass="uploadProgressBar"/>
+			                                    	progressListener="#{cargarArchivoOtrasEntElectVista.actionFileUploadProgress}"
+			                                    	actionListener="#{cargarArchivoOtrasEntElectVista.actionUploadFile}"
+			                                    	submitOnUpload="preUpload"  />
+			                                    	
+	                                    	<ice:outputProgress value="#{cargarArchivoOtrasEntElectVista.fileProgress}"  
+			                                        styleClass="uploadProgressBar"/>
+			                                        
+			                                 <ice:outputText value="#{etiquetas.lblInfoTipoArchivoExcel}" />
 										</ice:panelGrid>
 										</div>
 									</ice:panelGroup>
