--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-461.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-461.jrxml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO_FT_189" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.6105100000000074"/>
+	<property name="ireport.zoom" value="1.6105100000000077"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="194"/>
+	<property name="ireport.y" value="116"/>
 	<parameter name="acta" class="java.lang.String"/>
 	<parameter name="nombreApelante" class="java.lang.String"/>
 	<parameter name="resolucionApelada" class="java.lang.String"/>
-	<parameter name="resolucionComision" class="java.lang.String"/>
 	<parameter name="fecha" class="java.util.Date"/>
-	<parameter name="actaTribunal" class="java.lang.String"/>
 	<parameter name="argumento" class="java.lang.String"/>
 	<parameter name="decision" class="java.lang.String"/>
 	<parameter name="nombrePresidente" class="java.lang.String"/>
 	<parameter name="nombreSecretario" class="java.lang.String"/>
 	<parameter name="rutaImagen" class="java.lang.String"/>
 	<parameter name="resolucionNumero" class="java.lang.String"/>
+	<parameter name="resolucionComision" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -100,27 +99,27 @@
 				<text><![CDATA[Análisis de los hechos presentados]]></text>
 			</staticText>
 			<line>
-				<reportElement x="31" y="511" width="237" height="1" forecolor="#000000"/>
+				<reportElement x="31" y="484" width="237" height="1" forecolor="#000000"/>
 			</line>
 			<staticText>
-				<reportElement x="307" y="512" width="240" height="18" forecolor="#000000"/>
+				<reportElement x="307" y="485" width="240" height="18" forecolor="#000000"/>
 				<textElement textAlignment="Center">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Firma del secretario]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="31" y="512" width="237" height="18" forecolor="#000000"/>
+				<reportElement x="31" y="485" width="237" height="18" forecolor="#000000"/>
 				<textElement textAlignment="Center">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Firma del Presidente]]></text>
 			</staticText>
 			<line>
-				<reportElement x="307" y="511" width="240" height="1" forecolor="#000000"/>
+				<reportElement x="307" y="484" width="240" height="1" forecolor="#000000"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="31" y="184" width="517" height="65"/>
+				<reportElement x="50" y="187" width="498" height="65"/>
 				<textElement lineSpacing="Single">
 					<font size="10"/>
 				</textElement>
@@ -144,25 +143,18 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{acta}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="195" y="83" width="242" height="20"/>
-				<textElement textAlignment="Center" verticalAlignment="Bottom">
-					<font isBold="false"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionComision}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="31" y="134" width="517" height="42"/>
+				<reportElement x="31" y="138" width="517" height="42"/>
 				<textElement textAlignment="Justified" verticalAlignment="Top">
 					<font size="10" isBold="false"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA["Ha recibido este Tribunal según consta en el Acta No. "+$P{actaTribunal}+" el Recurso interpuesto y una vez revisados  los hechos y argumentos planteados por el Apelante  se determinó  procedente el argumento de:"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Ha recibido este Tribunal según consta en el Acta No. "+$P{acta}+" el Recurso interpuesto y una vez revisados  los hechos y argumentos planteados por el Apelante  se determinó  procedente el argumento de:"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="31" y="255" width="517" height="20"/>
+				<reportElement x="31" y="258" width="517" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Top">
 					<font size="10" isBold="false"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto se modifica la Resolución No."+$P{resolucionApelada}+" la cual queda así:"]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto se modifica la Resolución No. "+$P{resolucionApelada}+" la cual queda así:"]]></textFieldExpression>
 			</textField>
 			<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
 				<reportElement x="438" y="83" width="117" height="20"/>
@@ -172,14 +164,14 @@
 				<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="31" y="281" width="517" height="64"/>
+				<reportElement x="50" y="285" width="498" height="64"/>
 				<textElement>
 					<font size="10"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{decision}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="30" y="431" width="517" height="33"/>
+				<reportElement x="30" y="388" width="517" height="33"/>
 				<textElement textAlignment="Justified" lineSpacing="Single">
 					<font size="10"/>
 				</textElement>
@@ -224,23 +216,27 @@
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionNumero}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="31" y="404" width="517" height="20"/>
+				<reportElement x="31" y="359" width="517" height="20"/>
 				<textElement>
 					<font size="10"/>
 				</textElement>
 				<text><![CDATA[Se le hace saber que contra la presente Resolución NO procede ningún recurso.]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="31" y="352" width="516" height="45"/>
-				<textElement textAlignment="Justified">
-					<font size="10"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto, se niega el recurso de reposición interpuesto contra la Resolución No. " +$P{resolucionNumero}+ ", por las razones antes expuestas y se concede el recurso de apelación oportunamente interpuesto, procediendo a remitir la presente actuación al Tribunal de Elecciones y Escrutinios."]]></textFieldExpression>
+			<textField isBlankWhenNull="true">
+				<reportElement x="193" y="83" width="242" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionComision}]]></textFieldExpression>
 			</textField>
+			<rectangle>
+				<reportElement x="22" y="5" width="533" height="4" forecolor="#000000" backcolor="#000000"/>
+			</rectangle>
+			<rectangle>
+				<reportElement x="22" y="126" width="533" height="4" forecolor="#000000" backcolor="#000000"/>
+			</rectangle>
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="69">
+		<band height="59">
 			<staticText>
 				<reportElement x="22" y="38" width="100" height="18" forecolor="#009232"/>
 				<textElement>
