--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-462.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO-FT-462.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO_FT_189" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="2.1435888100000082"/>
-	<property name="ireport.x" value="42"/>
-	<property name="ireport.y" value="384"/>
+	<property name="ireport.zoom" value="1.7715610000000066"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="251"/>
 	<parameter name="acta" class="java.lang.String"/>
 	<parameter name="nombreApelante" class="java.lang.String"/>
 	<parameter name="resolucionApelada" class="java.lang.String"/>
@@ -13,7 +13,7 @@
 	<parameter name="nombrePresidente" class="java.lang.String"/>
 	<parameter name="nombreSecretario" class="java.lang.String"/>
 	<parameter name="rutaImagen" class="java.lang.String"/>
-	<parameter name="resolucion" class="java.lang.String"/>
+	<parameter name="resolucionNumero" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -114,7 +114,7 @@
 			<textField isBlankWhenNull="true">
 				<reportElement x="40" y="12" width="265" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{actaTribunal}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{acta}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="167" y="42" width="353" height="20"/>
@@ -139,41 +139,41 @@
 			<textField isBlankWhenNull="true">
 				<reportElement x="314" y="12" width="206" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucion}]]></textFieldExpression>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionNumero}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="403">
+		<band height="356">
 			<rectangle>
-				<reportElement x="37" y="24" width="496" height="360" forecolor="#000000"/>
+				<reportElement x="37" y="24" width="496" height="307" forecolor="#000000"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="37" y="1" width="282" height="20"/>
+				<reportElement x="47" y="1" width="282" height="20"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="11" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Análisis de los hechos presentados]]></text>
 			</staticText>
 			<line>
-				<reportElement x="52" y="351" width="215" height="1" forecolor="#000000"/>
+				<reportElement x="52" y="286" width="215" height="1" forecolor="#000000"/>
 			</line>
 			<staticText>
-				<reportElement x="305" y="355" width="215" height="18" forecolor="#000000"/>
+				<reportElement x="305" y="290" width="215" height="18" forecolor="#000000"/>
 				<textElement textAlignment="Center">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Nombre Y Firma del Secretario]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="52" y="355" width="215" height="18" forecolor="#000000"/>
+				<reportElement x="52" y="290" width="215" height="18" forecolor="#000000"/>
 				<textElement textAlignment="Center">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Nombre Y Firma del Presidente]]></text>
 			</staticText>
 			<line>
-				<reportElement x="305" y="351" width="215" height="1" forecolor="#000000"/>
+				<reportElement x="305" y="286" width="215" height="1" forecolor="#000000"/>
 			</line>
 			<rectangle>
 				<reportElement x="37" y="20" width="496" height="4" forecolor="#000000" backcolor="#000000"/>
@@ -186,7 +186,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["Ha recibido este Tribunal según consta en el Acta No. " +$P{acta}+ " el Recurso interpuesto y una vez revisados  los hechos y argumentos planteados por el Apelante  se determinó  No procedente el argumento de:"]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="50" y="85" width="470" height="44"/>
+				<reportElement x="66" y="85" width="454" height="44"/>
 				<textElement>
 					<font size="10"/>
 				</textElement>
@@ -200,23 +200,16 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto se confirma la Resolución No. " +$P{resolucionApelada}+ ", haciendo  saber que contra la presente Resolución NO procede ningún recurso."]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="50" y="181" width="470" height="56"/>
-				<textElement>
-					<font size="10"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto, se niega el recurso de reposición interpuesto contra la Resolución No." +$P{resolucionApelada}+ ", por las razones antes expuestas y se concede el recurso de apelación oportunamente interpuesto, procediendo a remitir la presente actuación al Tribunal de Elecciones y Escrutinios."]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="50" y="248" width="470" height="43"/>
+				<reportElement x="50" y="185" width="470" height="43"/>
 				<textElement>
 					<font size="10"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["La presente Resolución será comunicada al interesado, a la dirección que tenga registrada en la Cooperativa, en su condición de asociado, de acuerdo con lo previsto en el Artículo 110 del Código Electoral."]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="23" y="24" width="10" height="349" forecolor="#009232"/>
-				<textElement textAlignment="Center" verticalAlignment="Middle" rotation="Left">
-					<font size="6" isBold="true"/>
+				<reportElement x="19" y="24" width="14" height="307" forecolor="#009232"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom" rotation="Left">
+					<font size="8" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Vigilada por la Superintendencia de la Economia Solidaria NIT.: 890.300.625-1]]></text>
 			</staticText>
@@ -237,14 +230,14 @@
 			<staticText>
 				<reportElement mode="Transparent" x="396" y="32" width="137" height="16" forecolor="#009232" backcolor="#FFFFFF"/>
 				<textElement textAlignment="Right" verticalAlignment="Top" rotation="None" lineSpacing="Single" markup="none">
-					<font fontName="SansSerif" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<font fontName="SansSerif" size="8" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 				</textElement>
 				<text><![CDATA[Mod.Septiembre 2021]]></text>
 			</staticText>
 			<staticText>
 				<reportElement mode="Transparent" x="37" y="32" width="100" height="16" forecolor="#009232" backcolor="#FFFFFF"/>
 				<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" lineSpacing="Single" markup="none">
-					<font fontName="SansSerif" size="10" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
+					<font fontName="SansSerif" size="8" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false" pdfFontName="Helvetica" pdfEncoding="Cp1252" isPdfEmbedded="false"/>
 				</textElement>
 				<text><![CDATA[CO-FT-462]]></text>
 			</staticText>
