--- a/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_176.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/plantilla_CO_FT_176.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO-FT-172" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="2.593742460100014"/>
+	<property name="ireport.zoom" value="1.2100000000000062"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="1235"/>
+	<property name="ireport.y" value="189"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -266,6 +266,13 @@
 						<jr:detailCell style="table_TD" height="20" rowSpan="1">
 							<textField isStretchWithOverflow="true">
 								<reportElement x="0" y="0" width="553" height="20"/>
+								<box leftPadding="1">
+									<pen lineColor="#000000"/>
+									<topPen lineColor="#000000"/>
+									<leftPen lineColor="#000000"/>
+									<bottomPen lineColor="#000000"/>
+									<rightPen lineColor="#000000"/>
+								</box>
 								<textElement>
 									<font size="10"/>
 								</textElement>
